--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
   "name": "@ciaran1344/eslint-plugin",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "author": "Ciarán Ingle",
   "main": "src/index.js",
   "scripts": {
-    "format": "prettier --write .",
-    "lint": "eslint --fix src"
+    "format": "prettier --write ."
   },
   "keywords": [],
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^8.47.0",
-    "eslint-plugin-import": "^2.28.1",
     "prettier": "^3.0.2"
   }
 }
